--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,7 @@
 # This is the main configuration file for the application.
 # ~~~~~
-
+#Secure social plugin conf file
+include "securesocial.conf"
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
@@ -44,7 +45,7 @@ db.default.password=password
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+#evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
@@ -65,4 +66,6 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+
 
